[package]
name = "rgewe_api"
version = "0.1.0"
edition = "2021"
authors = ["Faye Momo <fayemomo019@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.216", features = ["derive"] }