[package]
name = "rgewe_api"
version = "0.1.1"
edition = "2021"
authors = ["Faye Momo <fayemomo019@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/momo402/rgewe-api"
homepage = "https://github.com/momo402/rgewe-api"
description = "A Rust API wrapper for GEWECHAT services"
keywords = ["api"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }